CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

+-----------------------+
| VERSION: 0.4.5        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
13-07-05    Added article summariser method
13-07-05    Added 'recent articles' block (Werner Krauss)
10-07-05    Usernames can now be as short as 3 chars (Michael Heuberger)
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.4        |
+-----------------------+
BUGFIXES
06-07-05    Fixed incorrect redirect following a 'Reset password' action invoked by
            admin
06-07-05    Updated PEAR xml-rpc lib with security flaw            
05-07-05    Fixed bug where non-alpha chars in config site name would cause parse
            error (STB Land)
04-07-05    Adding a block redirected to a blank screen - fixed
04-07-05    Removed stray comma that killed FCK editor for msie (Ori Shiloh)
04-07-05    Changed use of document.all to document.getElementById in installer (Leo 
            Lijstenmaker)
03-07-05    Removed reference to $_SERVER['REQUEST_URI'] in SimpleNav (Tony Oliver) that
            would cause non-Apache environments to fail
01-07-05    Fixed bug where recordsets sent to Pager weren't working because the
            'totalItems' key existed but was null

IMPROVEMENTS
09-07-05    Added alphanumeric constraint for DB passwd due to parse_ini_file's 
            inability to handle non-alphanumeric chars (Leo Lijstenmaker)
08-07-05    Fixed tooltips css for msie users (Andy Crain)
08-07-05    Added extra lang files to FCK component
04-07-05    Renamed SGL_Controller::_getPageObject() to _getModel()


+-----------------------+
| VERSION: 0.4.3        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
27-06-05    Implemented updates for improved Pager_Wrapper (Lorenzo Alberton) and added
            tests