@@ -297,7 +297,7 @@ class UserSearchMgr extends SGL_Manager
             $output->pager = ($aPagedData['totalItems'] <= $limit) ? false : true;
         }
         $output->totalItems = @$aPagedData['totalItems'];
-        $output->addOnLoadEvent('document.frmUserMgrChooser.users.disabled = true');
+        $output->addOnLoadEvent("document.getElementById('frmUserMgrChooser').users.disabled = true");
     }
 }
 ?>
