@@ -1,4 +1,4 @@
-<form name="frmResourceChooser" id="frmResourceChooser" flexy:ignore>
+<form id="frmResourceChooser" flexy:ignore>
     <div class="pager">
         {translate(#Manage#)}: 
         <input type="button" class="narrowButton" name="categories" value="{translate(#Categories#)}" 
