@@ -1,4 +1,4 @@
-<form name="users" method="post" flexy:ignore id="users" action="">
+<form method="post" flexy:ignore id="users" action="">
     <p><input type="hidden" name="action" value="delete" /></p>
 
     <h1 class="pageTitle">{translate(pageTitle)}</h1>
