@@ -1,43 +1,42 @@
+<form name="faqs" method="post" flexy:ignore id="faqs">
+    <input type="hidden" name="action" value="delete" />
 
-    <form name="faqs" method="post" flexy:ignore id="faqs">
-        <input type="hidden" name="action" value="delete" />
+    <h1 class="pageTitle">{translate(pageTitle)}</h1>
+    <span flexy:if="msgGet()">{msgGet()}</span>
 
-        <h1 class="pageTitle">{translate(pageTitle)}</h1>
-        <span flexy:if="msgGet()">{msgGet()}</span>
+    <table class="wide">
+        <tr>
+            <td colspan="6">
+                <input type="button" value="{translate(#new faq#)}" onclick="javascript:document.location.href='{makeUrl(#add#,#faq#)}'" /> 
+                <input type="button" value="{translate(#reorder#)}" onclick="javascript:document.location.href='{makeUrl(#reorder#,#faq#)}'" />
+            </td>
+        </tr>
 
-        <table class="wide">
-            <tr>
-                <td colspan="6">
-                    <input type="button" value="{translate(#new faq#)}" onclick="javascript:document.location.href='{makeUrl(#add#,#faq#)}'" /> 
-                    <input type="button" value="{translate(#reorder#)}" onclick="javascript:document.location.href='{makeUrl(#reorder#,#faq#)}'" />
-                </td>
-            </tr>
+        <tr>
+            <th>{translate(#Select#)}</th>
+            <th>{translate(#id#)}</th>
+            <th>{translate(#FAQ#)}</th>
+            <th>{translate(#Date created#)}</th>
+            <th>{translate(#Order#)}</th>
+            <th>{translate(#Edit#)}</th>
+        </tr>
 
-            <tr>
-                <th>{translate(#Select#)}</th>
-                <th>{translate(#id#)}</th>
-                <th>{translate(#FAQ#)}</th>
-                <th>{translate(#Date created#)}</th>
-                <th>{translate(#Order#)}</th>
-                <th>{translate(#Edit#)}</th>
-            </tr>
+        <tr class="{switchRowClass()}" flexy:foreach="results,key,valueObj">
+            <td align="center"><input class="noBorder" type="checkbox" name="frmDelete[]" value="{valueObj.faq_id}" /></td>
+            <td>{valueObj.faq_id}</td>
+            <td>{valueObj.question}</td>
+            <td align="center">{formatDate(valueObj.date_created)}</td>
+            <td align="center">{valueObj.item_order}</td>
+            <td align="center">
+                <a href="{makeUrl(#edit#,#faq#,##,results,#frmFaqId|faq_id#,key)}">
+                    <img src="{webRoot}/themes/{theme}/images/edit.gif" alt="edit" />
+                </a>
+            </td>
+        </tr>
 
-            <tr class="{switchRowClass()}" flexy:foreach="results,key,valueObj">
-                <td align="center"><input class="noBorder" type="checkbox" name="frmDelete[]" value="{valueObj.faq_id}" /></td>
-                <td>{valueObj.faq_id}</td>
-                <td>{valueObj.question}</td>
-                <td align="center">{formatDate(valueObj.date_created)}</td>
-                <td align="center">{valueObj.item_order}</td>
-                <td align="center">
-                    <a href="{makeUrl(#edit#,#faq#,##,results,#frmFaqId|faq_id#,key)}">
-                        <img src="{webRoot}/themes/{theme}/images/edit.gif" alt="edit" />
-                    </a>
-                </td>
-            </tr>
-
-            <tr>
-                <td colspan="6">{translate(#With selected faq(s)#)}: 
-                <input type="submit" name="delete" value="{translate(#delete#)}" onclick="return confirmSubmit('faq', 'faqs')" /></td>
-            </tr>
-        </table>
-    </form>
+        <tr>
+            <td colspan="6">{translate(#With selected faq(s)#)}: 
+            <input type="submit" name="delete" value="{translate(#delete#)}" onclick="return confirmSubmit('faq', 'faqs')" /></td>
+        </tr>
+    </table>
+</form>
