@@ -7,13 +7,22 @@
 
 {if:articleList}   
     {foreach:articleList,key,aValue}
-        <h3><strong>{aValue[title]}</strong></h3>
-        <div>{formatDatePretty(aValue[startDate])} :: {translate(#Contributed by#)}: <a href="{makeUrl(#view#,#profile#,#user#,articleList,#frmUserID|createdByID#,key)}">{aValue[creatorName]}</a></div>        
+        <h2><strong>{aValue[title]}</strong></h2>
+        <div><em>{formatDatePretty(aValue[startDate])}, {translate(#contributed by#)}: <a href="{makeUrl(#view#,#profile#,#user#,articleList,#frmUserID|createdByID#,key)}">{aValue[creatorName]}</a></em></div>
         {if:aValue[bodyHtml]}
-            <p>{aValue[bodyHtml]:h}{end:}
+            <p>{aValue[bodyHtml]:h}</p>
+        {end:}
         {if:aValue[newsHtml]}
-            <p>{aValue[newsHtml]:h}
-        {end:} [<a href="{makeUrl(#view#,#articleview#,#publisher#,articleList,#frmArticleID|item_id#,key)}" title="{aValue[title]}">{translate(#full story#)}</a>]</p>
+            <p>{aValue[newsHtml]:h}</p>
+        {end:}
+        <p>&nbsp;</p>
+        <p>[<a href="{makeUrl(#view#,#articleview#,#publisher#,articleList,#frmArticleID|item_id#,key)}" title="{aValue[title]}">{translate(#full story#)} "{aValue[title]}"</a>]
+        {if:isAdmin}
+            <a href="{makeUrl(#edit#,#article#,#publisher#,articleList,#frmArticleID|item_id#,key)}" />
+                [{translate(#edit#)}]
+            </a> <img src="{webRoot}/themes/{theme}/images/edit.gif" alt="edit" />
+        {end:}</p>
+        <hr />
     {end:}
     </ul>
 {else:}
