@@ -4,9 +4,9 @@
 <!--
     function checkNewButton()
     {
-        var buttValue = self.document.newArticle.frmDataTypeID.value;
+        var buttValue = document.getElementById('newArticle').frmDataTypeID.value;
         if (buttValue == 1)
-            self.document.newArticle.newArticleButton.disabled = true;
+            document.getElementById('newArticleButton').disabled = true;
     }
 
     function exp(strTag, strAttribute)
@@ -25,7 +25,7 @@
 //-->
 </script> 
 
-<form name="newArticle" flexy:ignore>
+<form id="newArticle" flexy:ignore>
 <input type="hidden" name="action" value="delete" />
 <span flexy:if="msgGet()">{msgGet()}</span>
 
@@ -70,12 +70,12 @@
                     <td>{translate(#Article type#)}: </td>
                     <td>
                         <select name="frmDataTypeID" 
-                            onChange="javascript:document.location.href='{makeUrl(##,#article#,#publisher#)}frmDataTypeID/' + getSelectedValue(self.document.newArticle.frmDataTypeID) + '/';" />
+                            onChange="javascript:document.location.href='{makeUrl(##,#article#,#publisher#)}frmDataTypeID/' + getSelectedValue(document.getElementById('newArticle').frmDataTypeID) + '/';" />
                             {generateSelect(aArticleTypes,dataTypeID):h}
                         </select>
                     </td>
                     <td>
-                        <input type="button" name="newArticleButton" value="{translate(#New Article#)}" 
+                        <input type="button" name="newArticleButton" id="newArticleButton" value="{translate(#New Article#)}" 
                             onClick="javascript:document.location.href='{makeUrl(#add#,#article#,#publisher#)}frmDataTypeID/' + getSelectedValue(document.newArticle.frmDataTypeID) + '/'" />
                         &nbsp;({translate(#select a type to create a new article#)})
                     </td>
