@@ -1,5 +1,5 @@
-<h3>{leadArticle[title]}</h3>
-<p>{formatDatePretty(leadArticle[startDate])} <br />
-    {translate(#contributed by#)}: <a href="{makeUrl(#view#,#profile#,#user#,##,#frmUserID|leadArticle[createdByID]#)}">{leadArticle[creatorName]}</a>
-</p>
+<!--this is the article detail view-->
+
+<h2><strong>{leadArticle[title]}</strong></h2>
+<div><em>{formatDatePretty(leadArticle[startDate])}, {translate(#contributed by#)}: <a href="{makeUrl(#view#,#profile#,#user#,##,#frmUserID|leadArticle[createdByID]#)}">{leadArticle[creatorName]}</a></em></div>
 <p>{leadArticle[bodyHtml]:h}</p>
