@@ -1,4 +1,4 @@
-<form name="frmUserMgrChooser" flexy:ignore>
+<form id="frmUserMgrChooser" flexy:ignore>
     <div class="pager">
         {translate(#Manage#)}: 
         <input type="button" class="narrowButton" name="users" value="{translate(#users#)}" onClick="javascript:document.location.href='{makeUrl(#list#,#user#,#user#)}'" />
